--- a/HuertoDelValle/Views/Home/Index.cshtml
+++ b/HuertoDelValle/Views/Home/Index.cshtml
@@ -1,8 +1,59 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="fondo">
+        <img src="~/img/fondo.jpg" alt="">
+    </div>
 </div>
+
+<article>
+    <div class="container">
+        <div class="row logo">
+            <div class="col">
+                <img src="~/img/logo.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
+    </div>
+</article>
+<br>
+<style>
+    .fondo img{
+        width: 120%;
+        height: 120%;
+        position: relative;
+        top: 50px;
+        right: 10%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+
+    }
+    @@media screen and (max-width:1200px)  {
+        .fondo img{
+            width: 100%;
+            height: 100%;
+            position: relative;
+            top:10px;
+            right: 0px;
+        }
+    }
+    article{
+        background-color: #EDC19A;
+        padding: 0px 20px 0px 20px;
+    }
+    .logo{
+        background-color: #ffffff;
+        height: 100%;
+    }
+    .logo img{
+        width : 40%;
+        height : 80%;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        position: relative;
+        
+        display:block;
+        margin:auto;
+    }
+</style>
