--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <link href="~/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0605142393.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm  box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/logo1.jpg" width="60px" height="60px" alt="" style="border: 2px solid #FFBB98"></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/logo1.jpg" width="90px" height="90px" alt="" style="border: 5px solid #FFBB98"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-reorder" style="font-size:33px"></i>
@@ -21,7 +22,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Catalogo</a>
+                            <a class="nav-link text" style="color: #000000; font-size: medium; font-family: cursive; font-weight: bolder;" asp-area="" asp-controller="Catalogo" asp-action="Catalogo">CATALOGO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Nosotros">Nosotros</a>
@@ -32,12 +33,13 @@
             </div>
         </nav>
     </header>
+    <br>
     <div class="">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
+    <br>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - HuertoDelValle - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -53,5 +55,6 @@
 <style>
     .navbar{
         background-color: #007175;
+        color: black;
     }
 </style>
