--- a/Views/Catalogo/Catalogo.cshtml
+++ b/Views/Catalogo/Catalogo.cshtml
@@ -1,18 +1,15 @@
 @model dynamic
 
-
 <div class="container">
-    <div class="">
-        <h2>Catalogo</h2>
+    <h2>Catalogo</h2>
         <hr>
-        <div>
             <nav class="navbar">
                 <div class="container-fluid">
-                    <div class="col-md-3 col-xs-4">
+                    <div class="col-md-3">
                         <div class="dropdown">
                             <form asp-controller="Catalogo" asp-action="Catalogo">
                             <select class="custom-select btn btn-outline-light" type="button"  name="FiltrarCategoria" onchange="this.form.submit()">
-                                <option asp-controller="Catalogo" asp-action="Catalogo" >Categorias</option>
+                                <option>Categorias</option>
                                 @foreach (Categoria item in Model.Categoria)
                                 {
                                     <option class="dropdown-item" value="@item.Id">@item.NombreCategoria</option>
@@ -21,16 +18,14 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-md-5 col-xs-8">
+                    <div class="col-md-5">
                         <form class="d-flex" method="POST">
-                            <input type="text" name="search" placeholder="Search.." required>
+                            <input type="text" name="Buscar" placeholder="Buscar..." required>
                         </form>
                     </div>
                 </div>
             </nav> 
-        </div>
         <br>
-    </div>
 
     <div class="text-center">
         <div class="row catalogue-container" data-aos="fade-up">
@@ -50,7 +45,7 @@
                             <div class="card-footer" >
                                 <form asp-action="" method="POST">
                                     <input type="hidden" name="id" value="@producto.Id">
-                                    <button  asp-action ="Add" class="btn btn-outline-success">Agregar</button>
+                                    <button  asp-action ="Add" class="btn btn-outline-success">Añadir</button>
                                 </form>
                             </div>
                     </div>
