--- a/Views/Catalogo/Producto.cshtml
+++ b/Views/Catalogo/Producto.cshtml
@@ -42,7 +42,7 @@
                     <div class="col-md-6">
                         <form asp-action="" method="POST">
                             <input type="hidden" name="id" value="@Html.DisplayFor(model => model.Id)">
-                            <button asp-action="Add" class="btn btn-outline-success">Agregar al carrito</button>
+                            <button asp-action="Add" class="btn btn-outline-success">Añadir al carrito</button>
                         </form>
                     </div>
                     </div>
