--- a/Views/Producto/AgregarProducto.cshtml
+++ b/Views/Producto/AgregarProducto.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="container">
-    <h3>Agregar Producto</h3>
+    <h3>Registrar Producto</h3>
     <hr/>
         
         <form asp-action="AgregarProducto" method="POST">
@@ -46,7 +46,7 @@
             </div>
 
             <div class="form-group">
-                <button class="btn btn-primary">Agregar Producto</button>
+                <button class="btn btn-primary">Registrar Producto</button>
             </div>
         </form>
 </div>
