--- a/Views/Administracion/RolCrear.cshtml
+++ b/Views/Administracion/RolCrear.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <form method="POST">
+        <form asp-action="CreateRole" method="POST">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="RoleName"></label>
