--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,66 +1,94 @@
 @page
 @model RegisterModel
-@{
-    ViewData["Title"] = "Register";
-}
+
 
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
+    <div class="col-md-1"></div>
+    <div class="col-md-12">
+        <form asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-register">
+            <center>
+                <h3 class="e0">Registrarse</h3>
+            </center>
+            
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+
+            <div class="f1">
+                <br>
+                <div class=" col-md-12">
+                    <div class="text-center">
+                            <img src="https://www.vippng.com/png/full/355-3552587_change-icon-and-system-text-size-on-windows.png" width="200" height="200" alt="">
+                        </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.ConfirmPassword"></label>
+                        <input asp-for="Input.ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <center>
+                        <button type="submit" class="btn">
+                            Registrarse 
+                        </button>
+                    </center>
+                </div>
+                <br>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+
+
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+   <div class="col-md-1"></div>
 </div>
+
+<style>
+
+    body {
+        background-color: #EDC19A;
+    }
+    .form-register {
+    width: 400px;
+
+    padding: 30px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 4px;
+
+    background-color: #FFFFFF;
+    }
+    .btn{
+        background-color: #2471A3;
+        color: white;
+    }
+    .e0{
+    font-family: 'Broadway';
+    color: #36404D;
+    }
+   
+    
+    .btn{
+        background-color: #2471A3;
+        color: #FFFFFF;
+        border-radius: 4px #FFFFFF;
+       font-family: 'Cooper Black';
+        
+    } 
+    .f1{
+        background-color: #FBF1F1;
+         font-family: 'Bauhaus 93';
+    }
+    
+</style>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
