--- a/Views/Administracion/ListarRoles.cshtml
+++ b/Views/Administracion/ListarRoles.cshtml
@@ -25,7 +25,8 @@
                 <h5 class="card-title">@role.Name</h5>
             </div>
             <div class="card-footer">
-                <a href="#" class="btn btn-primary">Editar</a>
+                <a asp-controller="Administracion" asp-action="EditRole" asp-route-id="@role.Id"
+            class="btn btn-primary">Editar</a>
                 <a href="#" class="btn btn-danger">Eliminar</a>
             </div>
         </div>
