--- a/Views/Catalogo/Producto.cshtml
+++ b/Views/Catalogo/Producto.cshtml
@@ -1,6 +1,6 @@
 @model Producto
 @{
-    ViewData["Title"] = "Descripcion del Producto";
+    ViewData["Title"] = "Descripción del Producto";
 }
 
 <div class="container">
