--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,59 +1,67 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
-<div class="container">
-    <div class="fondo">
-        <img src="~/img/fondo.jpg" alt="">
-    </div>
-</div>
 
-<article>
-    <div class="container">
-        <div class="row logo">
-            <div class="col">
-                <img src="~/img/logo.png" alt="">
+<div class="container-fondo">
+    <div class="fondo">
+        <div class="fondo__section">
+            <img src="~/img/fondo.jpg" alt="" class="fondo__img">
+            <div class="fondo__content">
+                <h2 class="fondo__title">LLEVAMOS DEL HUERTO A TU MESA</h2>
+                <p class="fondo__txt">
+                    El Huerto del Valle
+                </p>
             </div>
         </div>
-        <div class="row">
-
-        </div>
     </div>
-</article>
+</div>
 <br>
 <style>
-    .fondo img{
-        width: 120%;
-        height: 120%;
-        position: relative;
-        top: 50px;
-        right: 10%;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+.container-fondo{
+    width: 90%;
+    max-width: 1500px;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
 
-    }
-    @@media screen and (max-width:1200px)  {
-        .fondo img{
-            width: 100%;
-            height: 100%;
-            position: relative;
-            top:10px;
-            right: 0px;
-        }
-    }
-    article{
-        background-color: #EDC19A;
-        padding: 0px 20px 0px 20px;
-    }
-    .logo{
-        background-color: #ffffff;
-        height: 100%;
-    }
-    .logo img{
-        width : 40%;
-        height : 80%;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        position: relative;
-        
-        display:block;
-        margin:auto;
-    }
+.fondo{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: -1;
+}
+
+.fondo__section{
+    width: 100%;
+    position: relative;
+}
+
+.fondo__img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.fondo__content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    z-index: 999;
+}
+
+.fondo__title{
+    font-size: 52px;
+    font-family: "AdineuePRO";
+}
+
+.fondo__txt{
+    margin: 5px 0;
+    font-size: 20px;
+    font-family: "Monaco", monospace;
+}
 </style>
