barra de busqueda, estilos

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -54,7 +54,7 @@
 <style>
 
     body {
-        background-color: #EDC19A;
+        background: #f7f7f7;
     }
     .form-register {
     width: 400px;
