--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Home";
 }
-
+<link rel="stylesheet" href="~/css/site.css" />
 
 <div class="container-fondo">
     <div class="fondo">
@@ -18,6 +18,13 @@
 </div>
 <br>
 <style>
+    
+.fondo__title{
+  font-size: 52px;
+  font-family: 'Permanent Marker', cursive;
+  filter: blur(1.05px);
+}
+
 .container-fondo{
     width: 90%;
     max-width: 1500px;
