--- a/wwwroot/css/catalogo.css
+++ b/wwwroot/css/catalogo.css
@@ -1,8 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+
 *{
     box-sizing: border-box;
 }
 body{
     margin: 0;
+}
+.btn__cart{
+    display: block;
+    background-color: #fff;
+    border: 3px solid  ;
+    border-color: #ec8800;
+    border-radius: 10px;
+    color: #000000;
+    padding: 5px 0px;
+    text-align: center;
+    text-decoration: none;
+    width: 8.2rem;
+    height: 3rem;
+    margin: 5px auto;
+    transition: all 0.5s;
+    transition: transform .4s;
+    box-shadow: 0px 1px 1px 0px #fdfd96;
+    
+}
+.btn__cart:hover{
+    background-color: #ffa424;
+    color: #fff;
+    transform: scale(1.08);
 }
 
 .container-fondo{
@@ -73,9 +99,13 @@ body{
 }
 
 .main-tittle{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 55px;
     padding: 0 0 20px 0;
     text-align: center;
-    font-family: "Monaco", monospace;
+    font-family: 'Righteous', cursive;
+    color: #3D272A;
 }
 
 /*Estilos de Productos*/
@@ -90,6 +120,7 @@ body{
     padding: 20px;
     text-align: center;
     position: relative;
+    border-radius: 2rem;
 }
 
 .product:before{
@@ -134,25 +165,8 @@ body{
     font-weight: bold;
 }
 
-.btn__cart{
-    display: block;
-    border: 3px solid #FF4E00;
-    background-color: #fff;
-    color: #000000;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    width: 150px;
-    margin: 5px auto;
-    transition: all 0.5s;
-    transition: transform .4s;
-}
 
-.btn__cart:hover{
-    background-color: #FF4E00;
-    color: #fff;
-    transform: scale(1.08);
-}
+
 
 .product__icon{
     margin: 0px;
@@ -309,19 +323,7 @@ body{
         font-weight: bold;
     }
 
-    .btn__cart{
-        display: block;
-        border: 3px solid #FF4E00;
-        background-color: #fff;
-        color: #000000;
-        padding: 5px 0px;
-        text-align: center;
-        text-decoration: none;
-        width: 100px;
-        margin: 5px auto;
-        transition: all 0.5s;
-        transition: transform .4s;
-    }
+    
     
     .btn__cart:hover{
         background-color: #FF4E00;
