--- a/wwwroot/css/catalogo.css
+++ b/wwwroot/css/catalogo.css
@@ -121,7 +121,7 @@ body{
     padding: 20px;
     text-align: center;
     position: relative;
-    border-radius: 10px;
+    border-radius: 2rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2)
 }
 
