css(editar,regis y admi)

--- a/Views/Producto/AdministrarProducto.cshtml
+++ b/Views/Producto/AdministrarProducto.cshtml
@@ -31,3 +31,18 @@
         }
     </table>
 </div>
+    <style>
+         tr{
+            width:1000px;
+            padding:80px;
+            border-radius:50px;
+            margin:auto;
+            background-color:#ccc;
+        }
+        tr:hover{
+        background: #eee;
+        font-weight:bold;
+    
+
+}
+    </style>
