--- a/Views/Producto/EditarProducto.cshtml
+++ b/Views/Producto/EditarProducto.cshtml
@@ -50,3 +50,56 @@
             </div>
         </form>
 </div>
+    <style>
+       .btn:hover {
+        background: #2079b0;
+        background-image: -webkit-linear-gradient(top, #22353C, #007175);
+        background-image: -moz-linear-gradient(top, #22353C, #007175);
+        background-image: -ms-linear-gradient(top, #22353C, #007175);
+        background-image: -o-linear-gradient(top, #22353C, #007175);
+        background-image: linear-gradient(to bottom, #22353C, #007175);
+        text-decoration: none;
+        
+        
+        }
+        button {
+        -webkit-border-radius: 28;
+        -moz-border-radius: 28;
+        border-radius: 28px;
+        text-shadow: 2px 1px 0.5px #9daef5;
+        -webkit-box-shadow: 6px 5px 24px #666666;
+        -moz-box-shadow: 6px 5px 24px #666666;
+        box-shadow: 6px 5px 24px #666666;
+        font-family: Arial;
+        color: #fafafa;
+        font-size: 27px;
+        padding: 19px;
+        text-decoration: none;
+        background-image: -webkit-linear-gradient(top, #007175, #22353C);
+        background-image: -moz-linear-gradient(top, #007175, #22353C);
+        background-image: -ms-linear-gradient(top, #007175, #22353C);
+        background-image: -o-linear-gradient(top, #007175, #22353C);
+        background-image: linear-gradient(to bottom, #007175, #22353C);
+        }
+        
+       *{box-sizing:border-box;}
+
+        form{
+            width:1000px;
+            padding:80px;
+            border-radius:50px;
+            margin:auto;
+            background-color:#FBF1F1;
+        }
+
+        textarea{
+
+            background-color:#f6f6f6;			
+            margin:8px 0;
+            resize:none;
+            display:block;
+            background-color: #F6F6F6;   
+
+        }
+            
+    </style>
