--- a/wwwroot/css/catalogo.css
+++ b/wwwroot/css/catalogo.css
@@ -12,7 +12,7 @@ body{
     display: block;
     background-color: #fff;
     border: 3px solid  ;
-    border-color: #ec8800;
+    border-color: #ffa424;
     border-radius: 10px;
     color: #000000;
     padding: 5px 0px;
@@ -22,14 +22,14 @@ body{
     height: 3rem;
     margin: 5px auto;
     transition: all 0.5s;
-    transition: transform .4s;
+    transition: transform .5s;
     box-shadow: 0px 1px 1px 0px #fdfd96;
     
 }
 .btn__cart:hover{
     background-color: #ffa424;
     color: #fff;
-    transform: scale(1.08);
+    transform: scale(1.082);
 }
 .container-fondo{
     width: 90%;
@@ -81,6 +81,72 @@ body{
     letter-spacing: 5px;
 }
 
+/*Barra de navegación*/
+
+.container__search{
+    width: 100%;
+    max-width: 1700px;
+    margin: auto;
+    position: relative;
+    overflow: hidden; 
+    padding: 15px 0 15px 0;
+}
+
+.search{
+    display: grid;  
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    width:100%;
+    font-family:sans-serif;
+    background: #f7f7f7;
+    border-bottom:4px solid rgba(0,0,0,0.1);
+}
+
+.cont1{
+    height:100%;
+    padding:0px;  
+    float:left;
+}
+
+.dropdown{
+    width:170px;
+    margin: 20px 50px;
+    background-color: #fff;
+    color: #000;
+    padding: 16px;
+    font-size: 16px;
+    border: 1px solid #528BA0;
+    cursor: pointer;
+
+}
+
+option{
+    background-color: #f1f1f1;
+    font-size: 15px;
+}
+
+.cont{
+    height:100%;
+    padding: 0 5%;  
+    float:right;
+}
+
+input[type="search"]{
+    width:170px;
+    margin: 20px 50px;
+    padding:10px 16px;
+    border-radius:32px;
+    outline:none;
+    border:2px solid #528BA0;
+    background:#fff;
+    transition:all 0.5s;
+}
+input[type="search"]:focus{
+    background:#fff;
+    width:300px;
+}
+
+
 /*Estilos de contenedor*/
 
 .container{
@@ -99,10 +165,9 @@ body{
 }
 
 .main-tittle{
-    margin-top: 2rem;
+    margin-top: 0.5rem;
     margin-bottom: 2rem;
-    font-size: 55px;
-    padding: 0 0 20px 0;
+    font-size: 45px;
     text-align: center;
     font-family: 'Righteous', cursive;
     color: #3D272A;
@@ -120,18 +185,16 @@ body{
     padding: 20px;
     text-align: center;
     position: relative;
-    border-radius: 2rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2)
 }
 
 .product:before{
     content: "Producto";
     background: #ffe498;
-    padding: 10px;
-    width: 85px;
+    padding: 5px;
+    width: 80px;
     position: absolute;
-    top: 20px;
-    right: 10px;
+    top: 1.3em;
+    right: 0.1em;
     transform: rotate(-90deg);
     color: white;
     z-index: 1;
@@ -139,11 +202,11 @@ body{
 
 .product__img{
     width: 100%;
-    transition: transform .4s;
+    transition: transform .5s;
 }
 
 .product__img:hover{
-    transform: scale(1.05);
+    transform: scale(1.07);
 }
 
 .product__title{
@@ -212,6 +275,7 @@ body{
         right: 9px;
         transform: rotate(-90deg);
         color: white;
+        z-index: 1;
     }
 
     .product__title{
@@ -253,6 +317,14 @@ body{
 }
 
 @media (max-width: 700px){
+    .container__search{
+        width: 100%;
+        max-width: 700px;
+        margin: auto;
+        position: relative;
+        overflow: hidden; 
+        padding: 15px 0 15px 0;
+    }
 
     .container{
         width: 100%;
@@ -272,35 +344,62 @@ body{
         font-size: 10px;
     }
 
-    .fondo__btn{
-        display: block;
-        border: 2px solid #FFBB98;
-        color: aliceblue;
-        padding: 5px;
-        text-align: center;
-        text-decoration: none;
-        width: 100px;
-        font-size: 10px;
-        margin: 15px auto;
-        z-index: 999;
+    .dropdown{
+        width:130px;
+        margin:10px;
+        background-color: #fff;
+        color: #000;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        border-radius:2px;
+        cursor: pointer;
+
     }
+
+    input[type="search"]{
+        width:100px;
+        margin:10px;
+        padding:10px 16px;
+        border-radius:32px;
+        outline:none;
+        border:2px solid #ccd1d1;
+        background:#fff;
+        transition:all 0.5s;
+    }
+
+    input[type="search"]:focus{
+        background:#fff;
+        width:150px;
+    }   
 
     .main{
         padding: 30px 0px;
         width: 100%;
     }
 
+    .main-tittle{
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+        font-size: 25px;
+        padding: 0 0 20px 0;
+        text-align: center;
+        font-family: 'Righteous', cursive;
+        color: #3D272A;
+    }
+
     .product:before{
         content: "Producto";
-        font-size: 12px;
+        font-size: 10px;
         background: #ffe498;
-        padding: 5px;
-        width: 75px;
+        padding: 5px 0px;
+        width: 70px;
         position: absolute;
-        top: 23px;
-        right: 2px;
+        top: 22px;
+        right: 1px;
         transform: rotate(-90deg);
         color: white;
+        z-index: 1;
     }
 
     .product__title{
@@ -317,12 +416,10 @@ body{
 
     .product__price{
         color: #007175;
-        font-size: 16px;
+        font-size: 13px;
         font-weight: bold;
     }
 
-    
-    
     .btn__cart:hover{
         background-color: #FF4E00;
         color: #fff;
