--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -108,6 +108,18 @@
         background-color: #FBF1F1;
          font-family: 'Bauhaus 93';
     }
+    @@media (max-width: 800px){
+        .form-register {
+        width: 100%;
+
+        padding: 20px;
+        margin: auto;
+        margin-top: 100px;
+        border-radius: 4px;
+
+        background-color: #FFFFFF;
+        }
+    }
 </style>
 
 
