--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,22 +1,23 @@
 @page
 @model RegisterModel
 
+@{
+    ViewData["Title"] = "Registrarse";
+}
 
-<h1>@ViewData["Title"]</h1>
-
+<div class="container">
 <div class="row">
-    <div class="col-md-1"></div>
     <div class="col-md-12">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-register">
             <center>
                 <h3 class="e0">Registrarse</h3>
             </center>
-            
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-
             <div class="f1">
                 <br>
+            <div class="container">
+            <div class="row">
                 <div class=" col-md-12">
                     <div class="text-center">
                             <img src="https://www.vippng.com/png/full/355-3552587_change-icon-and-system-text-size-on-windows.png" width="200" height="200" alt="">
@@ -42,19 +43,28 @@
                         </button>
                     </center>
                 </div>
+            </div>
+            </div>
                 <br>
             </div>
 
 
         </form>
     </div>
-   <div class="col-md-1"></div>
 </div>
-
+</div>
 <style>
 
     body {
         background: #f7f7f7;
+        margin: 0;
+    }
+    .container{
+        width: 90%;
+        max-width: 1600px;
+        margin: auto;
+        position: relative;
+        overflow: hidden;
     }
     .form-register {
     width: 400px;
@@ -70,9 +80,11 @@
         background-color: #2471A3;
         color: white;
     }
+
     .e0{
-    font-family: 'Broadway';
-    color: #36404D;
+        font-family: 'Righteous', cursive;
+        font-weight: bold;
+        color: #3D272A;
     }
    
     
@@ -85,7 +97,21 @@
     } 
     .f1{
         background-color: #FBF1F1;
-         font-family: 'Bauhaus 93';
+        font-family: 'Bauhaus 93';
+        width: 100%;
+    }
+
+    @@media (max-width: 800px){
+        .form-register {
+        width: 100%;
+
+        padding: 20px;
+        margin: auto;
+        margin-top: 100px;
+        border-radius: 4px;
+
+        background-color: #FFFFFF;
+        }
     }
     
 </style>
