--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,4 +72,25 @@
         font-size: 20px;
         font-family: "Monaco", monospace;
     }
+
+    @@media (max-width: 700px){
+    .fondo__title{
+        font-size: 14px;
+        font-family: "AdineuePRO";
+    }
+    
+    .fondo__txt{
+        margin: 5px 0;
+        font-size: 10px;
+    }
+    
+    .main-tittle{
+        margin-top: 0.5rem;
+        margin-bottom: 2rem;
+        font-size: 25px;
+        text-align: center;
+        font-family: 'Righteous', cursive;
+        color: #3D272A;
+    }
+    }
 </style>
