--- a/wwwroot/css/catalogo.css
+++ b/wwwroot/css/catalogo.css
@@ -316,7 +316,7 @@ input[type="search"]:focus{
     }
 }
 
-@media (max-width: 700px){
+@media (max-width: 700px) and (min-width:300px){
     .container__search{
         width: 100%;
         max-width: 700px;
@@ -432,4 +432,78 @@ input[type="search"]:focus{
     }
     
 
+}
+
+@media (max-width: 300px){
+    .fondo__title{
+        font-size: 15px;
+        font-family: "AdineuePRO";
+    }
+    
+    .fondo__txt{
+        margin: 5px 0;
+        font-size: 10px;
+    }
+    
+    .main-tittle{
+        margin-top: 0.5rem;
+        margin-bottom: 2rem;
+        font-size: 25px;
+        text-align: center;
+        font-family: 'Righteous', cursive;
+        color: #3D272A;
+    }
+
+    .dropdown{
+        width:100px;
+        margin:10px;
+        background-color: #fff;
+        color: #000;
+        padding: 16px;
+        font-size: 10spx;
+        border: none;
+        border-radius:2px;
+        cursor: pointer;
+
+    }
+
+    input[type="search"]{
+        width:100px;
+        margin:10px;
+        padding:10px 16px;
+        border-radius:32px;
+        outline:none;
+        border:2px solid #ccd1d1;
+        background:#fff;
+        transition:all 0.5s;
+    }
+
+    input[type="search"]:focus{
+        background:#fff;
+        width: 105px;
+    }   
+
+    .search{
+        display: grid;  
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+        width:100%;
+        font-family:sans-serif;
+        background: #f7f7f7;
+        border-bottom:4px solid rgba(0,0,0,0.1);
+    }
+
+    .container{
+        width: 100%;
+        max-width: 1200px;
+        margin: auto;
+        position: relative;
+        overflow: hidden; 
+    }
+
+    .container-products{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+    }
 }
