--- a/wwwroot/css/footer.css
+++ b/wwwroot/css/footer.css
@@ -116,7 +116,7 @@ body{
     }
 }
 
-@media (max-width: 700px){
+@media (max-width: 700px) and (min-width:400px){
     .container{
         width: 100%;
         max-width: 1700px;
@@ -134,7 +134,31 @@ body{
     .footer__txt{
         display: inline-block;
         color: #555;
-        font-size: 15px;
+        font-size: 12px;
+        font-family: "Monaco", monospace;
+        padding: 5px 10px;
+    }
+}
+
+@media (max-width: 400px){
+    .container{
+        width: 100%;
+        max-width: 1700px;
+        margin: auto;
+        position: relative;
+        overflow: hidden; 
+    }
+    
+    .con__footer{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+    }
+
+    .footer__txt{
+        display: inline-block;
+        color: #555;
+        font-size: 10px;
         font-family: "Monaco", monospace;
         padding: 5px 10px;
     }
