--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -12,7 +16,7 @@
     <script src="https://kit.fontawesome.com/0605142393.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <!--<header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm  box-shadow">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/logo1.jpg" width="90px" height="90px" alt="" style="border: 5px solid #FFBB98"></a>
@@ -36,6 +40,44 @@
                 </div>
             </div>
         </nav>
+    </header>-->
+    <header>
+        <nav class="navbar">
+            <div class="brand-title" asp-area="" asp-controller="Home" asp-action="Index">
+                <img src="~/img/logo1.jpg" width="90px" height="90px" alt="" style="border: 5px solid #FFBB98">
+            </div>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a asp-area="" asp-controller="Catalogo" asp-action="Catalogo">CATALOGO</a></li>
+            <li><a asp-area="" asp-controller="Home" asp-action="Nosotros">Nosotros</a></li>
+            @if (SignInManager.IsSignedIn(User))
+        {
+            <li>
+                <a  class="bar" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+            </li>
+            <li>
+                <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                </form>
+            </li>
+        }
+        else
+        {
+            <li>
+                <a class="bar" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            </li>
+            <li>
+                <a class="bar" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            </li>
+        }
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <br>
