--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -16,7 +16,7 @@
     else
     {
 <p>
-        Please check your email to confirm your account.
+        Por favor, compruebe su correo electrónico para confirmar su cuenta.
 </p>
     }
 }
