--- a/wwwroot/css/header.css
+++ b/wwwroot/css/header.css
@@ -40,21 +40,15 @@ body {
 .logo1_nav{
     width: 80px;
     height: 80px;
-}
-
-.nav__title {
-    font-weight: 300;
-    /*text-decoration: underline;*/
-    color: #e5e5f7;
-    letter-spacing: 1px;
-    padding: 0 0px 0 0;
-    font-weight: 200;
+    border: 2px solid #FFBB98;
 }
 
 .nav__link {
     margin-left: auto;
+    margin-bottom: 0;
     padding: 0;
-    font-size: 20px;
+    text-transform: uppercase;
+    font-size: 1rem;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: max-content;
@@ -62,25 +56,36 @@ body {
 }
 
 .nav__links:hover {
-    color: orange;
+    color: #fff;
     text-decoration: none;
 }
 
 
 .nav__items {
     list-style: none;
+    display: inline-block;
+    margin: 5px 10px;
+    position: relative;
 }
 
 .nav__links {
     color: #e5e5f7;
     text-decoration: none;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .btn__logout{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    text-transform: uppercase;
     background: none;
     color: #e5e5f7;
     border: none;
+}
+
+.btn__logout:hover{
+    color: #fff;
+    text-decoration: none;
 }
 
 .btn__logout:focus{
