--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     .fondo__title {
         font-size: 52px;
         font-family: 'Permanent Marker', cursive;
-        filter: blur(1.05px);
+        filter: blur(1.00px);
     }
 
     .container-fondo {
@@ -64,7 +64,7 @@
 
     .fondo__title {
         font-size: 52px;
-        font-family: "AdineuePRO";
+        font-family: 'Permanent Marker', cursive;
     }
 
     .fondo__txt {
