--- a/Views/Producto/AgregarProducto.cshtml
+++ b/Views/Producto/AgregarProducto.cshtml
@@ -24,7 +24,7 @@
 
             <div class="form-group">
                 <label asp-for="Stock" ></label>
-                <input asp-for="Stock" class="form-control"/>
+                <input asp-for="Stock" class="form-control" min="1"/>
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
 
