--- a/Views/Catalogo/Producto.cshtml
+++ b/Views/Catalogo/Producto.cshtml
@@ -163,7 +163,7 @@
     }
 
     .title__conte{
-        padding: 10px 0 0 0 ;
+        padding: 10px 0 0 10px ;
     }
     
     /**/
@@ -221,8 +221,8 @@
             color: #0099CC;
             background: transparent;
             border: 2px solid #0099CC;
-            border-radius: 6px;
-            padding: 10px;
+            border-radius: 6px;margin top: 5px;
+            padding: 13px;
             font-size: 12px;
         }
 
@@ -245,8 +245,8 @@
         position: relative;
         -ms-flex: 1;
             flex: 1;
-        min-width: 230px;
-        padding: 25px;
+        min-width: 220px;
+        padding: 20px;
         overflow: hidden;
         left: 50%;
         border-top-left-radius: 5px;
